Noteworthy changes in version 1.4 (unreleased)
----------------------------------------------


Noteworthy changes in version 1.3 (2013-01-03)
----------------------------------------------

    * Added support for OpenPGP elliptic curve keys (ECDH and ECDSA)
      as specified in RFC 6637.

    * Use minimal OpenPGP packet encoding.  This does not affect
      functionality, but makes it more likely that a given key will
      match byte-for-byte the same key after running through paperkey.

    * Minor bug fixes.

    * Gnulib refresh.


Noteworthy changes in version 1.2 (2009-10-14)
----------------------------------------------

    * Minor documentation changes.

    * Gnulib refresh.

    * Generate output files with more restrictive permissions (go-rwx).


Noteworthy changes in version 1.1 (2009-02-10)
----------------------------------------------

    * Minor bug fix for Windows platforms.

    * Make the instructions on how to restore a key without paperkey a
      bit clearer.


Noteworthy changes in version 1.0 (2009-01-22)
----------------------------------------------

    * Minor documentation and build changes.

    * Gnulib refresh.


Noteworthy changes in version 0.8 (2008-02-01)
----------------------------------------------

    * The file format is now included as part of the base16 output, as
      there is no guarantee that this program will be on-hand when a
      reconstruction is necessary.  The format can also be displayed
      via the --file-format command.  Suggested by Brendan Kidwell.

    * Some bug fixes (actually to gnulib, but relevant here as well)
      to the SHA-1 code on platforms that require aligned access.
      Thanks to Peter Palfrader.

    * New --comment option to add comments to the base16 output.


Noteworthy changes in version 0.7 (2007-10-03)
----------------------------------------------

    * Man page contributed by Peter Palfrader.

    * Secret data can now be passed in on standard input if desired.

